<resources>
    <string name="app_name">Avengers</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="password">Enter Password</string>
    <string name="log_in">Log in</string>
    <string name="forget_password">Forget Password</string>
    <string name="register_here">Register Here</string>
    <string name="message">Enter your message</string>
    <string name="send">SEND</string>
    <string name="preference_file_name">Avengers Preferences</string>
    <string name="left_blank">Error!! Page Not Found</string>
    <string name="log_out">Log out</string>
</resources>