<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#429bf5"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:src="@drawable/avengers_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@id/imgLogo"
        android:maxLength="10"
        android:maxLines="1"
        android:hint="@string/mobile_number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@id/etMobileNumber"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/avenger"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="6dp"
        />
    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:padding="6dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:textSize="16dp"
        android:padding="6dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        />


</RelativeLayout>